--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,11 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'javax.persistence:javax.persistence-api:2.2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.mockito:mockito-core:3.12.4'
+    testImplementation 'org.mockito:mockito-junit-jupiter:3.12.4'
+	runtimeOnly 'mysql:mysql-connector-java:8.0.26'
+	testImplementation 'com.h2database:h2'
 }
 
 tasks.named('test') {
